apps/openspeedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openspeedtest
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      containers:
      - name: openspeedtest
        image: openspeedtest/latest:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
