apps/openspeedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  ports:
  - port: 3000
    protocol: TCP
    name: http
  selector:
    app: openspeedtest
  type: ClusterIP
