apps/openspeedtest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "speedtest.koutoulastha.dev"
  rules:
    - backendRefs:
        - name: openspeedtest
          port: 3000
